--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -11,7 +11,7 @@
 <!-- Page Header -->
 <h1 class="page-header">Contact Us</h1>
 
-<mat-card class="w-100">
+<mat-card class="card-style">
 
   <div fxLayout class="contact-container" >
 
