--- a/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
+++ b/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
@@ -106,7 +106,7 @@
             >
               Cancel
             </button>
-            <button mat-raised-button [disabled]="!form.valid" class="color-primary form-button">
+            <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">
               Confirm
             </button>
           </div>
