--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -11,6 +11,10 @@
 <div fxLayout="column">
   <header class="gradient-header">
 
+    <div class="bcrs">
+      <h1>Bob's Computer Repair Shop</h1>
+    </div>
+
     <!-- navigation -->
     <nav fxFlex>
 
