--- a/src/app/shared/forms/forgot-password/forgot-password.component.html
+++ b/src/app/shared/forms/forgot-password/forgot-password.component.html
@@ -1,33 +1,23 @@
-<mat-toolbar>
-  <mat-toolbar-row></mat-toolbar-row>
-  <mat-toolbar-row>
-    <div>
-      <p>
-        Bob's Computer Repair Shop <br /><br /><br />
-      </p>
-    </div>
-  </mat-toolbar-row>
-  <mat-toolbar-row></mat-toolbar-row>
-</mat-toolbar>
 
-<br /><br /><br />
 
-<div fxLayout="row-wrap" fxLayoutAlign="center start">
+<div fxLayout="column">
+
+  <div fxFlex>
+    <h1 class="page-header">
+      Forgot Password<br />
+      <span class="subtitle">
+        Fields marked with an asterisk (*) are required.
+      </span>
+    </h1>
+  </div>
+  <div class="messages">
+    <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
+  </div>
+
   <div fxFlex.gt-sm="55" fxFlex="100">
-    <br /><br />
 
-    <mat-card class="mat-elevation-z4 card-container">
-      <mat-card-title>
-        <h1>Forgot Password <br />
-          <span class="subtitle">
-            Fields marked with an asterisk (*) are required.
-          </span>
-        </h1>
-      </mat-card-title>
-
-      <br /><br />
-
-      <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
+    <mat-card class="mat-elevation-z4 card-30">
+      <h2>Enter Username</h2>
 
       <form [formGroup]="form" (ngSubmit)="verifyUser()" #usernameForm>
         <mat-card-content fxLayout="column">
