--- a/src/app/shared/forms/reset-password/reset-password.component.html
+++ b/src/app/shared/forms/reset-password/reset-password.component.html
@@ -1,35 +1,21 @@
 
 
-<mat-toolbar color="primary" style="border-bottom: 15px solid var(--green)">
-  <mat-toolbar-row></mat-toolbar-row>
-  <mat-toolbar-row>
-    <div class="layout-header-container">
-      <p id="large-text" class="layout-header-text comic-text">
-        Bob's Computer Repair Shop <br /><br /><br />
-      </p>
-    </div>
-  </mat-toolbar-row>
-</mat-toolbar>
+<div fxLayout="column">
 
-<br /><br /><br />
+  <div fxFlex>
+    <h1 class="page-header">
+      Forgot Password<br />
+      <span class="subtitle">
+        Fields marked with an asterisk (*) are required.
+      </span>
+    </h1>
+  </div>
 
-<div fxLayout="row wrap" fxLayoutAlign="center start">
   <div fxFlex.gt-sm="55" fxFlex="100">
 
-    <br /><br />
+    <mat-card class="card-30 mat-elevation-z4">
 
-    <mat-card class="card-container mat-elevation-z4">
-
-      <mat-card-title>
-        <h1 class="title">
-          Forgot Password<br />
-          <span class="subtitle">
-            Fields marked with an (*) are required.
-          </span>
-        </h1>
-      </mat-card-title>
-
-      <br /><br />
+      <h2>Enter a new password</h2>
 
       <form
         [formGroup]="form"
