--- a/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
+++ b/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
@@ -1,34 +1,23 @@
-<mat-toolbar>
-  <mat-toolbar-row></mat-toolbar-row>
-  <mat-toolbar-row>
-    <div class="title">
-      <h1>Bob's Computer Repair Shop <br /><br /><br /></h1>
-    </div>
-  </mat-toolbar-row>
-  <mat-toolbar-row></mat-toolbar-row>
-</mat-toolbar>
 
-<br /><br /><br />
 
-<div class="security-questions-container">
+<div fxLayout="column">
+
+  <div fxFlex>
+    <h1 class="page-header">
+      Forgot Password<br />
+      <span class="subtitle">
+        Fields marked with an asterisk (*) are required.
+      </span>
+    </h1>
+  </div>
+
+  <div class="messages">
+    <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
+  </div>
+
   <div>
-    <mat-card class="mat-card-top mat-elevation-z4 card-container">
-      <mat-card-title>
-        <h1 class="title">
-          Forgot Password <br />
-          <span class="subtitle">
-            Fields marked with an asterisk (*) are required.
-          </span>
-        </h1>
-      </mat-card-title>
+    <mat-card class="mat-elevation-z4 card-30">
 
-      <br />
-      <br />
-
-      <p-messages
-        [(value)]="errorMessages"
-        [enableService]="false"
-      ></p-messages>
       <h2>Verify Security Questions</h2>
       <form
         *ngIf="selectedSecurityQuestions"
