--- a/src/styles.css
+++ b/src/styles.css
@@ -109,10 +109,6 @@ body {
   height: 75px;
 }
 
-.gradient-menu {
-  background-color: #000;
-  box-shadow: 0 0 10px 5px var(--silver), inset 0 0 10px 5px var(--silver);
-}
 
 /* flex Style */
 .flex-container {
@@ -134,6 +130,11 @@ body {
 
 .card-form {
   width: 50%;
+  margin-inline: auto;
+}
+
+.card-30 {
+  width: 30%;
   margin-inline: auto;
 }
 
@@ -254,6 +255,12 @@ body {
 
 /* Media Queries */
 
+@media screen and (max-width: 1300px) {
+  .card-30 {
+    width: 70%;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .flex-container {
     display: flex;
@@ -268,11 +275,7 @@ body {
     flex-direction: column;
   }
 
-  .messages {
-    width: 100%;
-  }
-
-  .form-style {
+  .messages, .form-style, .card-30 {
     width: 100%;
   }
 
