--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -23,7 +23,7 @@ Description: component styling for the bcrs project
 
 .main-content {
   padding: 20px 30px 30px 30px;
-  min-height: 650px;
+  min-height: 69.7vh;
 }
 
 footer {
