--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -37,7 +37,7 @@ Description: component styling for the bcrs project
 
 .main-content {
   padding: 20px 30px 30px 30px;
-  min-height: 580px;
+  min-height: 63vh;
 }
 
 footer {
