--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -35,7 +35,7 @@
 
   <!-- Table Data -->
   <div fxFlex class="p-20">
-    <mat-card class="card-style">
+    <mat-card class="card-style-80">
       <p-table [value]="users" responsiveLayout="scroll" class="api-table">
 
         <!-- Table Header -->
