--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,11 @@ body {
   margin-inline: auto
 }
 
+.card-style-80 {
+  width: 80%;
+  margin-inline: auto
+}
+
 .card-form {
   width: 50%;
   margin-inline: auto;
@@ -259,7 +264,7 @@ body {
   .card-30 {
     width: 70%;
   }
-  .card-style {
+  .card-style-80 {
     width: 100%;
   }
 }
