--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -14,6 +14,9 @@
     <div class="bcrs">
       <h1>Bob's Computer Repair Shop</h1>
     </div>
+    <div class="bcrs-mobile">
+      <h1>Bob's Computer<br />Repair Shop</h1>
+    </div>
 
     <!-- navigation -->
     <nav fxFlex>
