--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -15,6 +15,9 @@
     <div class="bcrs">
       <h1>Bob's Computer Repair Shop</h1>
     </div>
+    <div class="bcrs-mobile">
+      <h1>Bob's Computer<br />Repair Shop</h1>
+    </div>
 
     <!-- navbar image-->
     <div class="house-img">
