--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -78,7 +78,7 @@
           <!-- User Profile -->
           <button mat-menu-item routerLink="profile" class="">
             <mat-icon>person</mat-icon>
-            Edit Profile
+            View Profile
           </button>
 
           <!-- Logout -->
