--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -6,3 +6,16 @@ Last Modified by: Walter McCue
 Last Modification Date: 04/26/23
 Description: component styling for the bcrs project
 */
+
+.house-img img {
+  height: 300px;
+}
+
+.editButton:hover,
+.editButton:focus {
+  background: var(--green);
+  color: #000;
+  text-shadow: none;
+  outline: none;
+  transition: .3s;
+}
