--- a/src/app/shared/forms/forgot-password/forgot-password.component.html
+++ b/src/app/shared/forms/forgot-password/forgot-password.component.html
@@ -1,8 +1,7 @@
-
-
 <div fxLayout="column">
 
   <div fxFlex>
+    <!-- Page Header -->
     <h1 class="page-header">
       Forgot Password<br />
       <span class="subtitle">
@@ -13,19 +12,19 @@
   <div class="messages">
     <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
   </div>
-
+  <!-- Enter username form -->
   <div fxFlex.gt-sm="55" fxFlex="100">
 
     <mat-card class="mat-elevation-z4 card-30">
       <h2>Enter Username</h2>
-
+      <!-- form -->
       <form [formGroup]="form" (ngSubmit)="verifyUser()" #usernameForm>
         <mat-card-content fxLayout="column">
           <mat-form-field fxFlex appearance="fill">
             <mat-label>Username</mat-label>
 
             <input matInput required formControlName="username" />
-
+            <!-- can't continue unless username is entered. -->
             <mat-error class="error"
               *ngIf="form.controls['username'].hasError('required') && form.controls['username'].touched">
               Username is a required field.
@@ -33,10 +32,12 @@
           </mat-form-field>
 
           <br /><br />
-
+          <!-- cancel and submit button -->
           <div fxFlex fxLayoutAlign="end" class="p5">
-            <button mat-raised-button routerLink="/session/login" class="cancel form-button">Cancel</button> &nbsp;&nbsp;
-            <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">Forgot Password</button>
+            <button mat-raised-button routerLink="/session/login" class="cancel form-button">Cancel</button>
+            &nbsp;&nbsp;
+            <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">Forgot
+              Password</button>
           </div>
         </mat-card-content>
       </form>
