additional code comments
additional code comments

--- a/src/app/shared/forms/forgot-password/forgot-password.component.html
+++ b/src/app/shared/forms/forgot-password/forgot-password.component.html
@@ -1,3 +1,14 @@
+<!--
+  Title: forgot-password.component.html
+  Author: Richard Krasso
+  Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/26/23
+  Last Modified by: Thomas Schultz
+  Last Modification Date: 04/29/23
+  Description: html for the bcrs project
+-->
+
+
 <div fxLayout="column">
 
   <div fxFlex>
