minor style update

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -6,7 +6,7 @@
   Last Modification Date: 04/29/23
   Description: html for the bcrs project
 -->
-<mat-card>
+<mat-card class="card-style">
 
   <div fxLayout>
     <div fxFlex class="flex-container">
