--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -40,7 +40,7 @@ Description: component styling for the bcrs project
 }
 
 .main-content {
-  padding: 20px 30px 30px 30px;
+  padding: 30px;
   min-height: 63vh;
 }
 
