--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -44,6 +44,12 @@
                   <mat-error class="error" *ngIf="contactForm.controls['firstName'].hasError('required') && contactForm.controls['firstName'].touched">
                     First name is a required field.
                   </mat-error>
+                  <mat-error *ngIf="contactForm.controls['firstName'].hasError('minlength') && contactForm.controls['firstName'].touched">
+                    First Name must be at least 3 characters.
+                  </mat-error>
+                  <mat-error *ngIf="contactForm.controls['firstName'].hasError('maxlength') && contactForm.controls['firstName'].touched">
+                    First Name must be less than 35 characters.
+                  </mat-error>
                 </mat-form-field>
 
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -53,6 +59,12 @@
                   <input matInput required formControlName="lastName">
                   <mat-error class="error" *ngIf="contactForm.controls['lastName'].hasError('required') && contactForm.controls['lastName'].touched">
                     Last name is a required field.
+                  </mat-error>
+                  <mat-error *ngIf="contactForm.controls['lastName'].hasError('minlength') && contactForm.controls['lastName'].touched">
+                    First Name must be at least 3 characters.
+                  </mat-error>
+                  <mat-error *ngIf="contactForm.controls['lastName'].hasError('maxlength') && contactForm.controls['lastName'].touched">
+                    First Name must be less than 35 characters.
                   </mat-error>
                 </mat-form-field>
               </mat-list-item>
@@ -66,6 +78,9 @@
                   <input matInput required formControlName="phoneNumber">
                   <mat-error class="error" *ngIf="contactForm.controls['phoneNumber'].hasError('required') && contactForm.controls['phoneNumber'].touched">
                     Phone number is a required field.
+                  </mat-error>
+                  <mat-error *ngIf="contactForm.controls['phoneNumber'].hasError('pattern') && contactForm.controls['phoneNumber'].touched">
+                    Phone number must be formatted as 999-999-9999.
                   </mat-error>
                 </mat-form-field>
 
@@ -92,6 +107,12 @@
                   <textarea matInput required formControlName="address"></textarea>
                   <mat-error class="error" *ngIf="contactForm.controls['address'].hasError('required') && contactForm.controls['address'].touched">
                     Address is a required field.
+                  </mat-error>
+                  <mat-error *ngIf="contactForm.controls['address'].hasError('minlength') && contactForm.controls['address'].touched">
+                    Last Name must be at least 3 characters.
+                  </mat-error>
+                  <mat-error *ngIf="contactForm.controls['address'].hasError('maxlength') && contactForm.controls['address'].touched">
+                    Last Name must be less than 75 characters.
                   </mat-error>
                 </mat-form-field>
               </mat-list-item>
@@ -131,7 +152,7 @@
 
                 &nbsp;&nbsp;&nbsp;&nbsp;
 
-                <!-- Security Anwser #1 -->
+                <!-- Security Answer #1 -->
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Answer</mat-label>
                   <input required matInput formControlName="answerToSecurityQuestion1">
@@ -160,7 +181,7 @@
 
                 &nbsp;&nbsp;&nbsp;&nbsp;
 
-                <!-- Security Anwser #2 -->
+                <!-- Security Answer #2 -->
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Answer</mat-label>
                   <input required matInput formControlName="answerToSecurityQuestion2">
@@ -189,7 +210,7 @@
 
                 &nbsp;&nbsp;&nbsp;&nbsp;
 
-                <!-- Security Anwser #3 -->
+                <!-- Security Answer #3 -->
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Answer</mat-label>
                   <input required matInput formControlName="answerToSecurityQuestion3">
