--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -6,6 +6,7 @@
   Last Modification Date: 04/29/23
   Description: html for the bcrs project
 -->
+<h1 class="page-header" style="padding-top: 15px;">Your Profile</h1>
 <mat-card class="card-style">
 
   <div fxLayout>
