security question disable feature

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -141,8 +141,11 @@
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Security Question</mat-label>
                   <mat-select required formControlName="securityQuestion1" [(ngModel)]="securityMenu1">
-                    <mat-option *ngFor="let question of securityQuestions" [value]="question.text" [(ngModel)]="securityOption1" [disabled]="isOptionDisabled()">
-                      {{ question.text }}
+                    <mat-option *ngFor="let question of securityQuestions"
+                      [value]="question.text"
+                      [disabled]="securityMenu2 === question.text"
+                      [disabled]="securityMenu3 === question.text"
+                    >{{ question.text }}
                     </mat-option>
                   </mat-select>
                   <mat-error class="error" *ngIf="sqForm.controls['securityQuestion1'].hasError('required') && sqForm.controls['securityQuestion1'].touched">
@@ -170,8 +173,11 @@
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Security Question</mat-label>
                   <mat-select required formControlName="securityQuestion2" [(ngModel)]="securityMenu2" [disabled]="isSelectedMenu1()">
-                    <mat-option *ngFor="let question of securityQuestions" [value]="question.text" [(ngModel)]="securityOption2" [disabled]="isOptionDisabled()">
-                      {{ question.text }}
+                    <mat-option *ngFor="let question of securityQuestions"
+                      [value]="question.text"
+                      [disabled]="securityMenu1 === question.text"
+                      [disabled]="securityMenu3 === question.text"
+                    >{{ question.text }}
                     </mat-option>
                   </mat-select>
                   <mat-error class="error" *ngIf="sqForm.controls['securityQuestion2'].hasError('required') && sqForm.controls['securityQuestion2'].touched">
@@ -199,8 +205,11 @@
                 <mat-form-field fxFlex appearance="fill">
                   <mat-label>Security Question</mat-label>
                   <mat-select required formControlName="securityQuestion3" [(ngModel)]="securityMenu3" [disabled]="isSelectedMenu2()">
-                    <mat-option *ngFor="let question of securityQuestions" [value]="question.text" [(ngModel)]="securityOption3" [disabled]="isOptionDisabled()">
-                      {{ question.text }}
+                    <mat-option *ngFor="let question of securityQuestions"
+                      [value]="question.text"
+                      [disabled]="securityMenu1 === question.text"
+                      [disabled]="securityMenu2 === question.text"
+                    >{{ question.text }}
                     </mat-option>
                   </mat-select>
                   <mat-error class="error" *ngIf="sqForm.controls['securityQuestion3'].hasError('required') && sqForm.controls['securityQuestion3'].touched">
