minor style update

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -304,7 +304,7 @@
     </mat-card-content>
   </mat-card>
 
-  <div>
+  <div class="card-style">
     <a routerLink="/session/login" class="neon-btn" style="width: 200px;">Employee Sign In</a>
   </div>
 
