--- a/src/app/shared/forms/reset-password/reset-password.component.html
+++ b/src/app/shared/forms/reset-password/reset-password.component.html
@@ -1,4 +1,11 @@
-
+<!--
+  Title: reset-password.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/26/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/26/23
+  Description: html for the bcrs project
+-->
 
 <div fxLayout="column">
 
