--- a/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
+++ b/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
@@ -1,4 +1,11 @@
-
+<!--
+  Title: verify-security-questions.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/26/23
+  Last Modified by: Jamal Damir
+  Last Modification Date: 04/26/23
+  Description: html for the bcrs project
+-->
 
 <div fxLayout="column">
 
