--- a/src/app/shared/forms/verify-security-questions/verify-security-questions.component.css
+++ b/src/app/shared/forms/verify-security-questions/verify-security-questions.component.css
@@ -1,3 +1,12 @@
+/**
+Title: verify-security-questions.component.css
+Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+Date: 04/26/23
+Last Modified by: Jamal Damir
+Last Modification Date: 04/26/23
+Description: component styling for the bcrs project
+*/
+
 .security-questions-container {
   display: flex;
   flex-direction: column;
