--- a/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
+++ b/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
@@ -8,8 +8,8 @@
 -->
 
 <div fxLayout="column">
-
   <div fxFlex>
+    <!-- Page Title-->
     <h1 class="page-header">
       Forgot Password<br />
       <span class="subtitle">
@@ -18,14 +18,16 @@
     </h1>
   </div>
 
+  <!-- Display error messages-->
   <div class="messages">
     <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
   </div>
 
   <div>
     <mat-card class="mat-elevation-z4 card-30">
-
       <h2>Verify Security Questions</h2>
+
+      <!-- For for verifying security questions -->
       <form
         *ngIf="selectedSecurityQuestions"
         [formGroup]="form"
@@ -33,6 +35,7 @@
         #usernameForm
       >
         <mat-card-content class="form-fields">
+          <!-- Question 1-->
           <mat-form-field fxFlex appearance="fill">
             <mat-label>{{ verifySecurityQuestionsModel.question1 }}</mat-label>
             <input
@@ -40,7 +43,7 @@
               required
               formControlName="answerToSecurityQuestion1"
             />
-
+            <!-- Error Handling-->
             <mat-error
               class="error"
               *ngIf="
@@ -51,7 +54,7 @@
               >Required Field</mat-error
             >
           </mat-form-field>
-
+          <!-- Question 2-->
           <mat-form-field fxFlex appearance="fill">
             <mat-label>{{ verifySecurityQuestionsModel.question2 }}</mat-label>
             <input
@@ -60,6 +63,7 @@
               formControlName="answerToSecurityQuestion2"
             />
 
+            <!-- Error Handling-->
             <mat-error
               class="error"
               *ngIf="
@@ -71,6 +75,7 @@
             >
           </mat-form-field>
 
+          <!-- Question 2-->
           <mat-form-field fxFlex appearance="fill">
             <mat-label>{{ verifySecurityQuestionsModel.question3 }}</mat-label>
             <input
@@ -79,6 +84,7 @@
               formControlName="answerToSecurityQuestion3"
             />
 
+            <!-- Error Handling-->
             <mat-error
               class="error"
               *ngIf="
@@ -94,6 +100,7 @@
           <br />
           <br />
 
+          <!-- Buttons to confirm security questions of cancel action-->
           <div fxFlex fxLayoutAlign="end" class="p5">
             <button
               mat-raised-button
@@ -102,7 +109,11 @@
             >
               Cancel
             </button>
-            <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">
+            <button
+              mat-raised-button
+              [disabled]="!form.valid"
+              class="primary-color form-button"
+            >
               Confirm
             </button>
           </div>
